--- a/play.html
+++ b/play.html
@@ -7,6 +7,10 @@
   <a href="play2.html">click here to  <b>next page</b></a>
 </head>
 <body>
+
+    <div id="content">
+        <img src="images.jpg" class="ribbon"/>
+    </div>
     <h1 style="font-family:Times; color:red" >Produced by Kamal</h1>
 
     <h3 class="name">A Woman of no Importance </h3>
@@ -28,7 +32,7 @@
             whatsoever.  If a man is a gentleman, he knows quite enough, and if he is
             not a gentleman, whatever he knows is bad for him.</p>
             
-            <h5  class="name GERALD">GERALD.</h5>  <p class=speech>But I am so ignorant of the world, Lord Illingworth.</p>
+            <h5  class="name GERALD">GERALD.<span href="#" class="ignorant"></span></h5>  <p class=speech>But I am so ignorant of the world, Lord Illingworth.</p>
             
             <h5  class="name ILLINGWORTH">LORD ILLINGWORTH.</h5>  <p class=speech>Don’t be afraid, Gerald.  Remember that you’ve got on
             your side the most wonderful thing in the world—youth!  There is nothing
